<resources>
    <string name="app_name">CalculatorRefactor</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multiply">X</string>
    <string name="key_polarity">+/-</string>
    <string name="key_dot">.</string>
    <string name="key_divide">/</string>
    <string name="key_с">С</string>
    <string name="key_result">=</string>
    <string name="key_del">←</string>
    <string name="key_сlean">C</string>
    <string name="key_radical">√</string>
    <string name="key_lightTheme">cветлая тема</string>
    <string name="key_darkTheme">темная тема</string>
    <string name="key_theme">тема приложения</string>


</resources>